<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TopSiteApp</string>
    <string name="gcm_send_message">Identification envoyé au serveur... \n[Récupérations de vos données...]\n[Activation des notifications push mobile...]!</string>
    <string name="token_error_message">Une erreur s\'est produite, veuillez réessayer!</string>
    <string name="registering_message">Génération d\'un token! \n+\n Connexion au serveur Vertin Go Website...!</string>
    <string name="notif_message">Diffuser et partager le lien de votre File Manager pour recevoir des notifications push de téléchargement,\n partage, affichage popup comme illustré ci-dessous!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="share">Partager!</string>
    <string name="notification_message">Notification push reçu sur votre mobile!</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="error">Erreur</string>
    <string name="success">Success</string>
    <string name="successfullypostedpost">Success</string>
    <string name="hello_user">Hello</string>
    <string name="ok">Ok</string>
    <string name="download">Afficher un aperçu de votre fichier pdf!</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="sharing_text">Your sharing text goes here…</string>
    <string name="share_title">Share Screenshot</string>
    <string name="screenshot_take_failed">Failed to take screenshot!!</string>
    <string name="wait">Please wait…</string>
    <string name="full_page_screenshot">Partager une capture d\'écran!</string>
    <string name="hidden_text">Hidden Text</string>
    <string name="custom_page_screenshot">Custom Page Screenshot</string>
    <string name="remote_pdf_url">Remote PDF URL</string>
    <string name="sample_pdf_url">http://vertin-go.com/TopSite/document/Emails_exemples.pdf</string>
    <string name="remote_pdf_example">Aperçu de fichier PDF</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password_non_identic">"Mot de passe non identique!"
    </string>
    <string name="pseudo_deja_prit">"Erreur le pseudo choisi est déjà utilisé!"
    </string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="send_sms_notification">Send SMS Notification</string>
    <string name="send_picture_notification">Send picture Notification</string>
    <string name="send_promotion_notification">Send promotion Notification</string>
    <string name="sms_notification_title">SMS Notification</string>
    <string name="sms_notification_content">We just sent a SMS notification. Yay!</string>
    <string name="picture_notification_title">Picture Notification</string>
    <string name="picture_notification_content">We just sent a picture notification. Yay!</string>
    <string name="promotion_notification_title">Promotion Notification</string>
    <string name="promotion_notification_content">We just sent a promotion notification. Yay!</string>
    <string name="SMS">SMS</string>
    <string name="Promotions">Promotions</string>
    <string name="sms_channel_name">Text</string>
    <string name="picture_channel_name">Picture</string>
    <string name="ads_channel_name">Weekly ads</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="image_content_description">Un Android avec un chien</string>
    <string name="create_account">Créer un compte</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="password2">Répétez le mot de passe</string>
    <string name="pseudo">Pseudo</string>
    <string name="connect">Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="title_activity_login_display">LoginDisplayActivity</string>
    <string name="hint_mail">"Ici : L'adresse email de l'utilisateur"</string>
    <string name="hint_pass">"Ici : Le mot de passe de l'utilisateur"</string>
    <string name="email_or_password_empty">"L'adresse email et mot de passe sont obligatoires"</string>
    <string name="email_format_error">"Le champs email ne correspond pas au format d'une adresse email"</string>
    <string name="group_item1">"Menu"</string>
    <string name="submenu_item1">"submenu_item1"</string>
    <string name="title_activity_statistiques">Statistiques</string>
    <string name="facebook_app_id">895056013904576</string>
    <string name="fb_login_protocol_scheme">fb895056013904576</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>